--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -5,7 +5,7 @@ name: Teste File Filter package
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "git-actions" ]
   pull_request:
     branches: [ "main" ]
   
