--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -24,15 +24,12 @@ jobs:
     
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
       - uses: SublimeText/UnitTesting/actions/setup@v1
         with:
           package-name: "${{ matrix.package-name }}"
           sublime-text-version: ${{ matrix.st-version }}
       - uses: SublimeText/UnitTesting/actions/run-tests@v1
         with:
-          coverage: false
+          coverage: true
           package-name: "${{ matrix.package-name }}"
       - uses: codecov/codecov-action@v4
