--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -18,7 +18,8 @@ jobs:
       matrix:
         package-name: ["File\ Filter"]     
         st-version: [3, 4]
-        os: ["ubuntu-latest", "macOS-latest", "windows-latest"]
+        # os: ["ubuntu-latest", "macOS-latest", "windows-latest"]
+        os: ["windows-latest"]
         
     runs-on: ${{ matrix.os }}
     
