git actions update; logging levels update; unittests config update

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -17,9 +17,8 @@ jobs:
       fail-fast: false
       matrix:
         package-name: ["File\ Filter"]     
-        st-version: [3, 4]
-        # os: ["ubuntu-latest", "macOS-latest", "windows-latest"]
-        os: ["windows-latest"]
+        st-version: [4]
+        os: ["ubuntu-latest", "macOS-latest", "windows-latest"]
         
     runs-on: ${{ matrix.os }}
     
