--- a/.github/workflows/workflow_dispatch.yml
+++ b/.github/workflows/workflow_dispatch.yml
@@ -1,33 +1,44 @@
+name: Release ST File Filter package
+
 on:
   workflow_dispatch:
     inputs:
-      logLevel:
-        description: 'Log level'
+      version:
+        description: 'version'
         required: true
-        default: 'warning'
-        type: choice
-        options:
-        - info
-        - warning
-        - debug
       tags:
-        description: 'Test scenario tags'
+        description: 'Tags'
         required: false
         type: boolean
-      environment:
-        description: 'Environment to run tests against'
-        type: environment
-        required: true
-
 jobs:
-  log-the-inputs:
-    runs-on: ubuntu-latest
+  run_tests:
+    uses: ./.github/workflows/run_tests.yml
+    # Adjust the path if your test workflow is located elsewhere
+
+  create_release:
+    runs-on: windows-latest
+    needs: run_tests
+    
     steps:
-      - run: |
-          echo "Log level: $LEVEL"
-          echo "Tags: $TAGS"
-          echo "Environment: $ENVIRONMENT"
+      - uses: actions/checkout@v4
+      - run: zip -r "File Filter.sublime-package" . -x ".github/**/*" "tests/**/*" ".gitignore" "unittesting.json"
+      - name: Create GitHub Release
+        id: create_release
+        uses: actions/create-release@v1
         env:
-          LEVEL: ${{ inputs.logLevel }}
-          TAGS: ${{ inputs.tags }}
-          ENVIRONMENT: ${{ inputs.environment }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ inputs.version }}
+          release_name: ${{ inputs.tags }}
+          draft: false
+          prerelease: false
+
+      - name: Upload Release Asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./"File Filter.sublime-package"
+          asset_name: "File Filter.sublime-package"
+          asset_content_type: application/zip
