--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,5 @@ unittesting.json export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
 gifs export-ignore
+*.cmd export-ignore
+*.bat export-ignore
